<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisClaroPrimario"
    tools:context=".MenuPrincipalFragment">

    <TextView
        android:id="@+id/tvTituloPrincipal"
        style="@style/tituloPrincipal.vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIniciarJuego"
        style="@style/botonMenuPrincipal.vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/jugar"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPrincipal" />

    <Button
        android:id="@+id/btnConfigurar"
        style="@style/botonMenuPrincipal.vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/configurar"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarJuego"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciarJuego"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarJuego" />

    <Button
        android:id="@+id/btnPuntuaciones"
        style="@style/botonMenuPrincipal.vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/puntuaciones"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/btnConfigurar"
        app:layout_constraintEnd_toEndOf="@+id/btnConfigurar"
        app:layout_constraintTop_toBottomOf="@+id/btnConfigurar" />

    <Button
        android:id="@+id/btnAcercaDe"
        style="@style/botonMenuPrincipal.vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/acercaDe"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/btnPuntuaciones"
        app:layout_constraintEnd_toEndOf="@+id/btnPuntuaciones"
        app:layout_constraintTop_toBottomOf="@+id/btnPuntuaciones"/>

    <Button
        android:id="@+id/btnSalir"
        style="@style/botonMenuPrincipal.vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/btnAcercaDe"
        app:layout_constraintEnd_toEndOf="@+id/btnAcercaDe"
        app:layout_constraintTop_toBottomOf="@+id/btnAcercaDe" />

</androidx.constraintlayout.widget.ConstraintLayout>