<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vertor"
        android:text="@string/app_name"
        android:textColor="@color/textoPrimario"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <Button
        android:id="@+id/botonIniciar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vertor"
        android:text="@string/jugar"
        android:textColor="@color/textoPrimario"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.147" />

    <Button
        android:id="@+id/botonConfigurar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vertor"
        android:text="@string/configurar"
        android:textColor="@color/textoPrimario"
        android:textSize="3pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIniciar"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/botonAcercaDe"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vertor"
        android:text="@string/acercaDe"
        android:textColor="@color/textoPrimario"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonConfigurar"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vertor"
        android:text="@string/salir"
        android:textColor="@color/textoPrimario"
        android:textSize="6pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonAcercaDe"
        app:layout_constraintVertical_bias="0.108" />

</androidx.constraintlayout.widget.ConstraintLayout>