<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/textoPrimario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/asteroide1"
            android:contentDescription="@string/descripcion_img_list"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvPuntuacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/baseTituloPuntuacion.texto_itemList"
            android:text="@string/puntuacion_list"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/imgPhoto"
            app:layout_constraintTop_toTopOf="@+id/imgPhoto"
            app:layout_constraintEnd_toStartOf="@+id/tvFecha"
            app:layout_constraintHorizontal_bias="0.5" />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/baseTituloPuntuacion.texto_itemList"
            android:text="@string/fecha_list"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tvPuntuacion"
            app:layout_constraintTop_toTopOf="@+id/imgPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/baseTituloPuntuacion.texto_itemList"
            android:text="@string/nombreJugador_list"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPhoto"
            app:layout_constraintTop_toBottomOf="@+id/tvPuntuacion" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>