<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/textoPrimario"
    tools:context=".AcercaDeFragment">

    <TextView
        android:id="@+id/tvTituloDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/letraVector.tituloDialog"
        android:text="@string/acercaDe"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imgDialog"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_atari"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDialog" />

    <TextView
        android:id="@+id/tvDescripcionDialog"
        style="@style/letraVector.contenidoDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contenido_acercaDe"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDialog"
        app:layout_constraintTop_toTopOf="@+id/imgDialog" />

    <TextView
        android:id="@+id/tvDescripcion2Dialog"
        style="@style/letraVector.contenidoDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contenido2_acercaDe"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDialog" />

    <ImageView
        android:id="@+id/imgAsteroide"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_jugar"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion2Dialog" />

    <TextView
        android:id="@+id/tvRepoDialog"
        style="@style/letraVector.contenidoDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/repoGithub_acercaDe"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/imgAsteroide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescripcion2Dialog"
        />





</androidx.constraintlayout.widget.ConstraintLayout>